# primo-mcp-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: purdue-librarians.json
src/primo_mcp_server/: __init__.py  citations.py  client.py  config.py  exporters.py  formatter.py  models.py  server.py
src/purduelibrary_mcp_server/: __init__.py  __main__.py  calibrate_embeddings.py  citations.py  client.py  config.py  evaluate_recommendations.py  exporters.py  formatter.py  librarian_embeddings.py  librarians.py  models.py  policy.py  profile_tools.py  query.py  recommendation.py  server.py  springshare.py
tests/: test_citations.py  test_client.py  test_config.py  test_evaluate_recommendations.py  test_exporters.py  test_formatter.py  test_librarian_embeddings.py  test_librarians.py  test_models.py  test_profile_tools.py  test_server.py  test_springshare.py
