[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purduelibrary-mcp-server"
version = "0.1.0"
description = "Purdue-focused MCP server for searching Purdue University Libraries Primo catalogue, articles, databases, and records."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Gehe Haridas" },
]
maintainers = [
    { name = "Aaron Tay Chee Hsien" },
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "snowballstemmer>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/aarontaycheehsien/purduelibrary-mcp-server"
Repository = "https://github.com/aarontaycheehsien/purduelibrary-mcp-server"
Issues = "https://github.com/aarontaycheehsien/purduelibrary-mcp-server/issues"
Original = "https://github.com/geheharidas/purduelibrary-mcp-server"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[project.scripts]
purduelibrary-mcp-server = "purduelibrary_mcp_server:main"
purduelibrary-profiles = "purduelibrary_mcp_server.profile_tools:main"
purduelibrary-eval = "purduelibrary_mcp_server.evaluate_recommendations:main"

[tool.hatch.build.targets.wheel]
packages = ["src/purduelibrary_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
